@@ -1,3 +1,7 @@
+2003-07-31  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* user_interface.cpp game.cpp
+	  - support for multiple cloud textures and one new cloud texture.
+
 2003-07-30  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* game.cpp submarine.cpp
 	  - moved dc explosion dependend parts to submarine.cpp
